// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stories/components/ScoreBoard Normal smoke-test 1`] = `
<div class="ScoreBoard_container__Kf5rs container"
     style="--percent: 41.17647058823529%;"
>
  <div data-team="true"
       class="hstack"
       style="flex-grow: 7;"
  >
    <span data-team-name="true"
          data-testid="homeTitle"
    >
      home
    </span>
    <span data-team-score="true"
          data-testid="homeScore"
    >
      7
    </span>
  </div>
  <div data-team="true"
       class="hstack"
       style="flex-grow: 10;"
  >
    <span data-team-score="true"
          data-testid="awayScore"
    >
      10
    </span>
    <span data-team-name="true"
          data-testid="awayTitle"
    >
      away
    </span>
  </div>
</div>
`;

exports[`stories/components/ScoreBoard WithCountdown smoke-test 1`] = `
<div class="ScoreBoard_container__Kf5rs container"
     style="--percent: 58.82352941176471%;"
>
  <div data-team="true"
       class="hstack"
       style="flex-grow: 10;"
  >
    <span data-team-name="true"
          data-testid="homeTitle"
    >
      home
    </span>
    <span data-team-score="true"
          data-testid="homeScore"
    >
      10
    </span>
  </div>
  <div data-team="true"
       class="hstack"
       style="flex-grow: 7;"
  >
    <span data-team-score="true"
          data-testid="awayScore"
    >
      7
    </span>
    <span data-team-name="true"
          data-testid="awayTitle"
    >
      away
    </span>
  </div>
  <span data-countdown="true">
    00:30
  </span>
</div>
`;

exports[`stories/components/ScoreBoard WithSubtitle smoke-test 1`] = `
<div class="ScoreBoard_container__Kf5rs container"
     style="--percent: 58.82352941176471%;"
>
  <div data-team="true"
       class="hstack"
       style="flex-grow: 10;"
  >
    <span data-team-name="true"
          data-testid="homeTitle"
    >
      home
    </span>
    <span data-team-score="true"
          data-testid="homeScore"
    >
      10
    </span>
  </div>
  <div data-team="true"
       class="hstack"
       style="flex-grow: 7;"
  >
    <span data-team-score="true"
          data-testid="awayScore"
    >
      7
    </span>
    <span data-team-name="true"
          data-testid="awayTitle"
    >
      away
    </span>
  </div>
  <span data-subtitle="true">
    1 - 3
  </span>
</div>
`;
